fix(jdk17): replace List.getFirst()/getLast() with get(0)/get(size()-1)
JDK 21+ SequencedCollection methods surfaced in commits cherry-picked from
main during the whole-window sweep. Java 17 (maven-compiler-plugin.release=17)
does not have List.getFirst()/getLast(), so these calls fail to compile.
Pair/BetweenCondition/Deque callers were left untouched since those carry
their own getFirst()/getLast() unrelated to JDK 21.